--- a/src/_assets/sass/_portfolio.scss
+++ b/src/_assets/sass/_portfolio.scss
@@ -17,6 +17,12 @@
     color: $medium;
     font-size: 80%;
   }
+
+  .project-link {
+    s {
+      color: $light;
+    }
+  }
 }
 
 .device-screenshots {
